--- a/ea-extension/.classpath
+++ b/ea-extension/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="lib" path="lib/Interop.EA.jar"/>
 	<classpathentry kind="lib" path="lib/mscorlib.jar"/>
 	<classpathentry kind="lib" path="lib/swt.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/ea-adapter"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
