--- a/ea-extension/build.xml
+++ b/ea-extension/build.xml
@@ -10,6 +10,7 @@
 			<fileset dir="ea-model/bin" />
 			<fileset dir="merge-algorithm/bin" />
 			<fileset dir="ea-extension/bin" />
+			<fileset dir="ea-adapter/bin" />
 		</jar>
 	</target>
 	<target name="ikvm" depends="jar">
