--- a/ea-adapter/.classpath
+++ b/ea-adapter/.classpath
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="de/proskor/emc/EAModel.java" kind="src" path="src"/>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="lib/Interop.EA.jar"/>
 	<classpathentry kind="lib" path="lib/mscorlib.jar"/>
-	<classpathentry kind="lib" path="lib/swt.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/org.eclipse.epsilon.eol.engine"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
