--- a/cft-test/.classpath
+++ b/cft-test/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry exported="true" kind="lib" path="lib/scalatest-1.6.1.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/ea-adapter"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
