--- a/ea-adapter/.classpath
+++ b/ea-adapter/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="lib/Interop.EA.jar"/>
-	<classpathentry kind="lib" path="lib/mscorlib.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/Interop.EA.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/mscorlib.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
