--- a/ea-model/.classpath
+++ b/ea-model/.classpath
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/cft-model"/>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry excluding="de/proskor/cft/model/ea/peers/EAElementPeer.scala|de/proskor/cft/model/ea/peers/EAPackagePeer.scala|de/proskor/cft/model/ea/peers/EARepositoryPeer.scala" kind="src" path="src"/>
 	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="lib/Interop.EA.jar"/>
 	<classpathentry kind="lib" path="lib/mscorlib.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/ea-adapter"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
