--- a/ea-extension/.classpath
+++ b/ea-extension/.classpath
@@ -7,9 +7,8 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="lib/Interop.EA.jar"/>
-	<classpathentry kind="lib" path="lib/mscorlib.jar"/>
 	<classpathentry kind="lib" path="lib/swt.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/ea-adapter"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/ea-automation"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
