--- a/cft-test/.classpath
+++ b/cft-test/.classpath
@@ -7,5 +7,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/ea-adapter"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/ea-model"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/redundancy-removal"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
