--- a/cft-integration/.classpath
+++ b/cft-integration/.classpath
@@ -5,8 +5,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="lib/Interop.EA.jar"/>
 	<classpathentry kind="lib" path="lib/mscorlib.jar"/>
-	<classpathentry kind="lib" path="/home/andrey/ide/eclipse-mod/plugins/org.eclipse.epsilon.eol.engine_0.9.1.201107251201/org.eclipse.epsilon.eol.engine.jar" sourcepath="/home/andrey/ide/eclipse-mod/plugins/org.eclipse.epsilon.eol.engine_0.9.1.201107251201/src"/>
-	<classpathentry kind="lib" path="/home/andrey/ide/eclipse-mod/plugins/org.eclipse.epsilon.commons_0.9.1.201107251201/org.eclipse.epsilon.commons.jar" sourcepath="/home/andrey/ide/eclipse-mod/plugins/org.eclipse.epsilon.commons_0.9.1.201107251201/src"/>
 	<classpathentry kind="lib" path="lib/swt.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.eclipse.epsilon.eol.engine"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
