--- a/ea-extension/.classpath
+++ b/ea-extension/.classpath
@@ -7,8 +7,9 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="lib/swt.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/ea-adapter"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/ea-automation"/>
+	<classpathentry kind="var" path="ECLIPSE_HOME/plugins/org.eclipse.jface_3.7.0.v20110928-1505.jar" sourcepath="/ECLIPSE_HOME/plugins/org.eclipse.jface.source_3.7.0.v20110928-1505.jar"/>
+	<classpathentry kind="var" path="ECLIPSE_HOME/plugins/org.eclipse.swt.gtk.linux.x86_64_3.7.2.v3740f.jar" sourcepath="/ECLIPSE_HOME/plugins/org.eclipse.swt.gtk.linux.x86_64.source_3.7.2.v3740f.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
