--- a/ea-extension/.classpath
+++ b/ea-extension/.classpath
@@ -11,5 +11,7 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/ea-automation"/>
 	<classpathentry kind="var" path="ECLIPSE_HOME/plugins/org.eclipse.jface_3.7.0.v20110928-1505.jar" sourcepath="/ECLIPSE_HOME/plugins/org.eclipse.jface.source_3.7.0.v20110928-1505.jar"/>
 	<classpathentry kind="var" path="ECLIPSE_HOME/plugins/org.eclipse.swt.gtk.linux.x86_64_3.7.2.v3740f.jar" sourcepath="/ECLIPSE_HOME/plugins/org.eclipse.swt.gtk.linux.x86_64.source_3.7.2.v3740f.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/ea-fel"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/fel-adapter"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
