--- a/ea-extension/build.xml
+++ b/ea-extension/build.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="cft" default="deploy">
 	<property name="host" value="192.168.122.39" />
-	<property name="jar" value="ea-extension.jar" />
-	<property name="dll" value="ea-extension.dll" />
+	<property name="jar" value="cft-integration.jar" />
+	<property name="dll" value="cft-integration.dll" />
 	<target name="jar">
 		<jar destfile="ea-extension/dist/${jar}">
 			<fileset dir="ea-automation/bin">
@@ -25,13 +25,12 @@
 			<arg value="-target:library" />
 			<arg value="-version:1.0.0.0" />
 			<arg value="-out:ea-extension/dist/${dll}" />
-			<arg value="-r:ea-extension/dll/automation.dll" />
+			<arg value="-keyfile:ea-integration/integration/proskor.snk" />
 			<arg value="-r:ea-extension/dll/Interop.EA.dll" />
-			<arg value="-r:ea-extension/dll/scala-library.dll" />
-			<arg value="-r:ea-extension/dll/scalatest-1.6.1.dll" />
+			<arg value="-r:ea-extension/dll/addin.dll" />
+			<arg value="-r:ea-extension/dll/scala.dll" />
 			<arg value="-r:ea-extension/dll/swt.dll" />
 			<arg value="-r:ea-extension/dll/junit.dll" />
-			<arg value="-r:/usr/lib/mono/4.0/mscorlib.dll" />
 			<arg value="ea-extension/dist/${jar}" />
 		</exec>
 	</target>
