--- a/ea-extension/build.xml
+++ b/ea-extension/build.xml
@@ -18,6 +18,7 @@
 			<fileset dir="ea-adapter/bin" />
 			<fileset dir="ea-fel/bin" />
 			<fileset dir="fel-adapter/bin" />
+			<fileset dir="fel-impl/bin" />
 			<fileset dir="epsilon-shell/bin" />
 			<fileset dir="emc-model/bin" />
 			<fileset dir="redundancy-removal/bin" />
