ea libraries extracted

--- a/ea-extension/.classpath
+++ b/ea-extension/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/epsilon-shell"/>
 	<classpathentry kind="var" path="SWT_LIB"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/fel-impl"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Automation"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
