--- a/ea-extension/.classpath
+++ b/ea-extension/.classpath
@@ -11,7 +11,7 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/ea-automation"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/epsilon-shell"/>
 	<classpathentry kind="var" path="SWT_LIB"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Automation"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/ea-fel"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/ea-utils"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
