--- a/cft-model/.project
+++ b/cft-model/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>cft-model</name>
+	<name>cft-model-old</name>
 	<comment></comment>
 	<projects>
 	</projects>
