--- a/emc-model/.classpath
+++ b/emc-model/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/cft-model"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/cft-model-old"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/ea-adapter"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/ea-model"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.antlr.runtime_3.1.b1"/>
